--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.7",
+    "bcrypt": "^5.0.1"
   },
   "devDependencies": {
-    "bcrypt": "^5.0.1",
     "eslint": "^7.32.0",
-    "mongoose": "^5.13.7",
     "nodemon": "^2.0.12"
   }
 }
